add create method

--- a/templates/data/list_datas.html
+++ b/templates/data/list_datas.html
@@ -5,7 +5,7 @@
         <div class="row mt-4">
 
             <h3>CSV GENERATOR</h3>
-            <a class="btn btn-primary col-md-3" href="#">Create new data</a>
+            <a class="btn btn-primary col-md-3" href="{% url 'data:create_data' %}">Create new data</a>
 
             <table class="table mt-3">
                 <thead>
